--- a/ShoppingGuide/Classes/Me/Controller/LYLoginViewController.xib
+++ b/ShoppingGuide/Classes/Me/Controller/LYLoginViewController.xib
@@ -125,7 +125,7 @@
                         <constraint firstAttribute="height" constant="30" id="Olh-AI-Lhe"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <state key="normal" title="验证码登入">
+                    <state key="normal" title="密码登入">
                         <color key="titleColor" red="0.66666666666666663" green="0.66666666666666663" blue="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
                     <connections>
