--- a/ShoppingGuide/Classes/Me/Controller/LYLoginViewController.xib
+++ b/ShoppingGuide/Classes/Me/Controller/LYLoginViewController.xib
@@ -170,14 +170,14 @@
                         <constraint firstAttribute="height" constant="30" id="ywM-jZ-vc7"/>
                     </constraints>
                 </view>
-                <button opaque="NO" tag="101" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="psM-Bn-S9K">
+                <button opaque="NO" tag="101" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="psM-Bn-S9K">
                     <rect key="frame" x="265" y="362" width="70" height="70"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="70" id="DHa-3E-jK3"/>
                         <constraint firstAttribute="width" constant="70" id="G6T-VA-iom"/>
                     </constraints>
                     <fontDescription key="fontDescription" name=".PingFangSC-Regular" family=".PingFang SC" pointSize="12"/>
-                    <state key="normal" title="即将开放" backgroundImage="Share_WeChatSessionIcon_70x70_">
+                    <state key="normal" backgroundImage="Share_WeChatSessionIcon_70x70_">
                         <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                     <connections>
